--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^7.1.96",
     "material-design-icons-iconfont": "^6.7.0",
     "mdi": "^2.2.43",
+    "moment": "^2.29.4",
     "vue": "3.2.38",
     "vuetify": "^3.1.1"
   },
